--- a/style.css
+++ b/style.css
@@ -5,10 +5,11 @@
     https://www.rit.edu/
     Helvetica Neue (?), Helvetica, Roboto
 */
+
 * {
     color: #FF4500;
     background-color: #444444;
-    font-family: "Helvetica Neue","Helvetica","Roboto","Arial",sans-serif;
+    font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
 }
 
 body {
@@ -16,8 +17,8 @@ body {
     position: relative;
 }
 
-
 /* Header */
+
 header {
     top: 0;
     position: fixed;
@@ -65,14 +66,14 @@ header .headerImageContainer {
     border-radius: 50%;
 }
 
-
 /* Main */
+
 main {
     padding-top: 80px;
     width: 100%;
 }
 
-main div{
+main div {
     margin: 20px;
     border: 1px solid white;
     display: flex;
@@ -81,35 +82,12 @@ main div{
     padding: 10px;
 }
 
-    /* Main project */
-main #projectsSlideShow {
-    margin-left: 0;
-    margin-right: 0;
-    padding: 0;
-    border: none;
-    display: block;
+/* Main chisono */
+
+main #chisono {
+    background-color: blanchedalmond;
 }
 
-main #projectsSlideShow .projectSlide{
-    margin: 0;
-    padding: 0;
-}
-
-
-main #projectsSlideShow .projectSlide .previousSlide, 
-main #projectsSlideShow .projectSlide .nextSlide {
-    width: 50%;
-    height: 50%;
-    z-index: 0;
-}
-
-main #projectsSlideShow .projectSlide .projectSlideImage {
-    width: 100%;
-    height: 300px;
-    z-index: 10;
-}
-
-    /* Main chisono */
 main #chisono .imageChiSonoContainer {
     margin: 5px;
     width: 200px;
@@ -128,7 +106,57 @@ main #chisono .chiSonoSummaryContainer {
     display: block;
 }
 
-    /* Main hardSkills */
+/* Main project */
+
+main #projectsSlideShow {
+    margin-left: 0;
+    margin-right: 0;
+    padding: 0;
+    border: none;
+    display: block;
+}
+
+main #projectsSlideShow .projectSlide {
+    margin: auto;
+    padding: 0;
+    
+}
+
+main #projectsSlideShow .projectSlide .projectSlideImage {
+    width: 100%;
+    height: 300px;
+}
+
+main #projectsSlideShow .previousSlide, 
+main #projectsSlideShow .nextSlide {
+    top: 50%;
+    position: absolute;
+    font-size: 30px;
+    padding: 20px;
+    cursor: pointer;
+}
+
+main #projectsSlideShow .previousSlide:hover, 
+main #projectsSlideShow .nextSlide:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+main #projectsSlideShow .previousSlide {
+    left: 0;
+}
+
+main #projectsSlideShow .nextSlide {
+    right: 0;
+}
+
+
+
+/* Main hardSkills */
+
+main #hardSkills {
+    background-color: cadetblue;
+}
+
 main #hardSkills div {
     margin: 5px;
     width: 25px;
@@ -153,13 +181,20 @@ main #hardSkills div a img:hover {
     height: auto;
 }
 
+/* Main hobbiesList */
+
+main #hobbiesSlideShow {
+    background-color: burlywood;
+}
+
 /* Footer */
+
 footer {
     width: 100%;
     border-top: 1px solid white;
 }
 
-footer div{
+footer div {
     display: flex;
     align-items: center;
     justify-content: space-between;
