--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ nav {
     font-size: 26px;
     font-weight: bold;
     border-bottom: 1px solid white;
+    z-index: 1000;
 }
 
 #linksContainer {
@@ -135,24 +136,39 @@ a:active{
     width: 1200px;
     height: 700px;
     border: 1px solid black;
-}
-
-.slider .previous {
-    z-index: 1;
-    position: absolute;
-    right: 0;
+    position: relative;
 }
 
 .sliderImage {
     width: 100%;
-    z-index: 0;
-}
-
-.slider .next {
-    z-index: 1;
-    position: absolute;
     
 }
+.slider .previous, .slider .next {
+    width: 100px;
+    height: 100px;
+    border: 1px black solid;
+    border-radius: 50%;
+    cursor: pointer;
+    position: absolute;
+    color: #000000;
+    top: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 48px;
+}
+
+.slider .previous:hover, .slider .next:hover {
+    background-color: #c4c4c4;
+}
+
+.slider .previous {
+    left: 0;
+}
+
+.slider .next{
+    right: 0;
+} 
 
 /*ROW*/
 .row {
