--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@
         - Orange: #F76902
 */
 
+/* Reset */
+
 * {
     background-color: #FFFFFF;
     font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
@@ -22,15 +24,43 @@ body {
     padding: 0;
 }
 
+/* Utils */
+
 :root {
     --text-color: #F76902;
     --text-black: #000000;
     --text-grey:  #C4C4C4;
 }
 
-/*  NAV */
-nav {
+.w-100 {
     width: 100%;
+}
+
+.flex-center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.paddingLeft-8 {
+    padding-left: 8%;
+}
+
+.paddingRight-5 {
+    padding-right: 5%;
+}
+
+.paddingRight-8 {
+    padding-right: 8%;
+}
+
+.paddingBottom-2 {
+    padding-bottom: 2%;
+}
+
+/* General */
+
+nav {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -44,7 +74,6 @@ nav {
 
 #linksContainer {
     display: flex;
-    width: 100%;
     justify-content: space-evenly;
 }
 
@@ -60,11 +89,7 @@ a:hover {
 
 a:active{
     color: var(--text-black)
-}
-.active {
-    color: var(--text-black);
-}
-
+}.active {color: var(--text-black);} /* Da cancellare */
 
 #logoContainer {
     margin-left: 50px;
@@ -86,20 +111,12 @@ a:active{
     border-radius: 50%;
 }  
 
-/* MAIN */
-#chiSono, #progetti {
-    width: 100%;
-}
-
-#progetti {
-    height: 1024px;
-}
-
 .titleContainer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
+    margin: 2% 0;
+    font-size: 48px;
+    color: var(--text-color);
+}
+.titleContainer p {
     margin: 2% 0;
     font-size: 48px;
     color: var(--text-color);
@@ -111,26 +128,6 @@ a:active{
     margin-right: 2%;
 }
 
-.contentContainer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.contentContainer .imageContentContainer {
-    padding: 0 8% 5% 8%;
-}
-
-.contentContainer .imageContentContainer img {
-    width: 400px;
-    height: 600px;
-}
-
-.contentContainer .content {
-    font-size: 24px;
-    line-height: 2.5;
-    padding-right: 8%;
-}
 
 .slider {
     width: 1200px;
@@ -140,9 +137,9 @@ a:active{
 }
 
 .sliderImage {
-    width: 100%;
-    
+    height: 100%;
 }
+
 .slider .previous, .slider .next {
     width: 100px;
     height: 100px;
@@ -152,9 +149,6 @@ a:active{
     position: absolute;
     color: #000000;
     top: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     font-size: 48px;
 }
 
@@ -173,15 +167,31 @@ a:active{
 /*ROW*/
 .row {
     height: 250px;
-    width: 100%;
     background-color: black;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
-.rowContent {
+.rowText {
     background-color: inherit;
     color: #FFF;
     font-size: 72px;
 }
+
+/* Specific */
+
+#chiSono div img:last-child {
+    width: 400px;
+    height: 600px;
+}
+
+#chiSono div:last-child {
+    font-size: 24px;
+    line-height: 2.5;
+    padding-right: 8%;
+}
+
+
+
+
+
+
+
