--- a/style.css
+++ b/style.css
@@ -58,8 +58,7 @@ body {
     padding-bottom: 2%;
 }
 
-/* General */
-
+/* NAVIGATION BAR */
 nav {
     display: flex;
     align-items: center;
@@ -111,6 +110,7 @@ a:active{
     border-radius: 50%;
 }  
 
+/* ROW */
 .titleContainer {
     margin: 2% 0;
     font-size: 48px;
@@ -128,12 +128,38 @@ a:active{
     margin-right: 2%;
 }
 
+/* BLANK ROW */
+.row {
+    height: 250px;
+    background-color: black;
+}
 
+.rowText {
+    background-color: inherit;
+    color: #FFF;
+    font-size: 72px;
+}
+
+/* CHI SONO ROW */
+
+#chiSono div img:last-child {
+    width: 400px;
+    height: 600px;
+}
+
+#chiSono div:last-child {
+    font-size: 24px;
+    line-height: 2.5;
+    padding-right: 8%;
+}
+
+/* SLIDER */
 .slider {
     width: 1200px;
     height: 700px;
     border: 1px solid black;
     position: relative;
+    display: flex;
 }
 
 .sliderImage {
@@ -148,7 +174,6 @@ a:active{
     cursor: pointer;
     position: absolute;
     color: #000000;
-    top: 50%;
     font-size: 48px;
 }
 
@@ -157,41 +182,27 @@ a:active{
 }
 
 .slider .previous {
-    left: 0;
+    left: 20;
 }
 
 .slider .next{
-    right: 0;
+    right: 20;
 } 
 
-/*ROW*/
-.row {
-    height: 250px;
-    background-color: black;
+/* SKILLS SECTION */
+
+.skills {
+    display: grid;
+    
+    /* TODO creare griglia skills */
 }
 
-.rowText {
-    background-color: inherit;
-    color: #FFF;
-    font-size: 72px;
+.skill {
+    width: 300px;
+    height: 300px;
+    border: #000000 solid 1px;
 }
-
-/* Specific */
-
-#chiSono div img:last-child {
-    width: 400px;
-    height: 600px;
+.skill img {
+    width: inherit;
+    height: inherit;
 }
-
-#chiSono div:last-child {
-    font-size: 24px;
-    line-height: 2.5;
-    padding-right: 8%;
-}
-
-
-
-
-
-
-
