--- a/style.css
+++ b/style.css
@@ -58,6 +58,10 @@ body {
     padding-bottom: 2%;
 }
 
+.paddingTopBottom-2 {
+    padding: 2% 0;
+}
+
 /* NAVIGATION BAR */
 nav {
     display: flex;
