--- a/style.css
+++ b/style.css
@@ -204,7 +204,8 @@ a:active{
 .skills {
     display: grid;
     grid-template-columns: auto auto auto;
-    grid-gap: 180px 180px;
+    row-gap: 180px;
+    column-gap: 180px;
 }
 
 .skill {
@@ -213,8 +214,7 @@ a:active{
     border: #000000 solid 1px;
 }
 .skill img {
-    width: inherit;
-    height: inherit;
+    width: 100%;
 }
 
 /* TODO HOBBY SECTION */
@@ -236,6 +236,13 @@ footer .titleContainer p {
     background-color: inherit;
 }
 
+footer p {
+    text-align: center;
+    background-color: inherit;
+    padding: 0 0 1% 0;
+    margin: 0;
+}
+
 .contactCards {
     display: flex;
     justify-content: space-evenly;
@@ -243,8 +250,19 @@ footer .titleContainer p {
 }
 
 .contactCard {
-    width: 150px;
-    height: 250px;
-    background-color: #FFF;
-    border: 1px solid #000;
+    width: 200px;
+    height: 300px;
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+}
+
+.contactCard img {
+    width: 100%;
+    border-radius: 25%;
+}
+
+.contactCard p {
+    background-color: inherit;
+    text-align: center;
 }
