--- a/style.css
+++ b/style.css
@@ -30,6 +30,8 @@ body {
     --text-color: #F76902;
     --text-black: #000000;
     --text-grey:  #C4C4C4;
+
+    --bg-footer: #393939;
 }
 
 .w-100 {
@@ -60,6 +62,10 @@ body {
 
 .paddingTopBottom-2 {
     padding: 2% 0;
+}
+
+.hidden {
+    display: none;
 }
 
 /* NAVIGATION BAR */
@@ -134,7 +140,6 @@ a:active{
 
 /* BLANK ROW */
 .row {
-    height: 250px;
     background-color: black;
 }
 
@@ -159,8 +164,8 @@ a:active{
 
 /* SLIDER */
 .slider {
-    width: 1200px;
-    height: 700px;
+    width: 800px; /*Rapporto 16:9*/
+    height: 470px;
     border: 1px solid black;
     position: relative;
     display: flex;
@@ -197,16 +202,68 @@ a:active{
 
 .skills {
     display: grid;
-    
-    /* TODO creare griglia skills */
+    grid-template-columns: auto auto auto;
+    row-gap: 180px;
+    column-gap: 180px;
 }
 
 .skill {
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
     border: #000000 solid 1px;
 }
 .skill img {
-    width: inherit;
-    height: inherit;
+    width: 100%;
+}
+
+/* TODO HOBBY SECTION */
+
+footer {
+    background-color: var(--bg-footer);
+    color: var(--text-color);
+}
+
+footer .titleContainer {
+    background-color: inherit;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding-left: 5%;
+}
+
+footer .titleContainer p {
+    background-color: inherit;
+}
+
+footer p {
+    text-align: center;
+    background-color: inherit;
+    padding: 0 0 1% 0;
+    margin: 0;
+}
+
+.contactCards {
+    display: flex;
+    justify-content: space-evenly;
+    background-color: inherit;
+}
+
+.contactCard {
+    width: 200px;
+    height: 300px;
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+}
+
+.contactCard img {
+    width: 100%;
+    border-radius: 25%;
+}
+
+.contactCard p {
+    background-color: inherit;
+    text-align: center;
+    font-size: 36px;
+    padding-top: 5%;
 }
