--- a/!style_minified.css
+++ b/!style_minified.css
@@ -256,6 +256,8 @@ nav {
     -webkit-overflow-scrolling: touch;
     scroll-snap-type: x mandatory;
     scroll-behavior: smooth;
+    border-top-right-radius: 10%;
+    border-top-left-radius: 10%;
 }
 
 .slide {
